--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -1,31 +1,2 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
-ul, ol {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-input {
-  all: unset;
-  //display: flex;
-}
-
-.container {
-  max-width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-:root, body, #app {
-  height: 100%;
-  width: 100%;
-}
+@import "normalize";
+@import "flexGrid";
